less/header-style.less
/* ... */
// -----------------------------
// Feature
// -----------------------------

.feature {
    .background-image,
    .content-wrap {
        @media only screen and (min-width: 1025px) {
            height: 100vh;
        }
        min-height: 680px;
        @media only screen and (max-width: 600px) {
            min-height: 340px;
        }
    }
    .background-image {
        display: table;
        width: 100%;
        background-size: cover;
        // Overlay
        &:before {
            content: "";
            display: block;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            background-color: @color__feature-content--background;
            opacity: 0.5;
        }
    }
    .content-wrap {
        position: relative;
        width: 100%;
        vertical-align: bottom;
        display: table-cell;
        text-align: center;
        @media only screen and (min-width: 1025px) {
            padding: 60vh 0 20px;
        }
        padding: 60% 0 20px;
        @media only screen and (max-width : 600px) {
            vertical-align: middle;
            padding: 20px;
        }
    }
    .content-inner-wrap {
        max-width: 800px;
        margin: 0 auto;
        @media only screen and (max-width : 960px) {
            max-width: 700px;
        }
    }
    .headline {
        font-family: @font__feature-headline--font-family;
        color: @color__feature-headline--text;
        font-size: @font__feature-headline--font-size;
        font-weight: @font__feature-headline--font-weight;
        line-height: @font__feature-headline--line-height;
        letter-spacing: @font__feature-headline--letter-spacing;
    }
    .strapline {
        font-family: @font__feature-strapline--font-family;
        color: @color__feature-strapline--text;
        font-size: @font__feature-strapline--font-size;
        font-weight: @font__feature-strapline--font-weight;
        line-height: @font__feature-strapline--line-height;
        letter-spacing: @font__feature-strapline--letter-spacing;
        opacity: 0.8;
        @media screen and (max-width : 600px) {
            opacity: 1;
        }
    }
    .button {
        width: auto;
        margin: 10px 0;
        padding: 0 20px;
        border: 2px solid fade(@color__feature-button--border, 15%);
        font-size: 14px;
        line-height: 24px;
        color: @color__feature-button--text;
        background-color: @color__feature-button--background;
    }
    .button:hover {
        border: 2px solid @color-swatch3;
        color: fade(@color__feature-button--text, 80%);
    }
}

@media screen and (max-width : 600px) and (orientation:landscape) {
    .feature .content-wrap {
        vertical-align: bottom;
    }
}

// Feature Image and Text Size on Tablet
@media only screen and (max-width : 960px) {
    .feature {
        .headline {
            font-size: bkscale(@font__feature-headline--font-size, .8);
            line-height: bkscale(@font__feature-headline--line-height, .8);
        }
        .strapline {
            font-size: bkscale(@font__feature-strapline--font-size, .9);
            line-height: bkscale(@font__feature-strapline--line-height, .9);
        }
    }
}




// -------------------
// Feature Full Height
// -------------------

.bk-pt-home [data-widget-type="feature"] {
    width: 100%;
}

.bk-pt-home [data-widget-type="feature"] + .hero-header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    margin-bottom: 0;
    border-bottom: none;

    @media only screen and (min-width: 1025px) {
        height: 60vh;
    }

    min-height: 80%;
    @media only screen and (max-width: 600px) {
        min-height: auto;
        position: relative;
        margin-bottom: 20px;
    }

    .hero-logo {
        position: absolute;
        top: 40%;
        @media only screen and (max-width : 1024px) {
            top: 30%;
            bottom: inherit;
        }
        @media only screen and (max-width : 600px) {
            position: relative;
        }
    }
    .company-link {
        color: @color__companyname--text;
        &:hover {
            color: @color-swatch3;
        }
    }
    .navigation-list--children {
        background-color: transparent;
    }
    .open .navigation-toggle:before {
        box-shadow: none;
    }
}

.bk-tpl-hidden[data-widget-type="feature"] + .hero-header {
    position: relative;
    height: auto;
    min-height: inherit;
    .flex-container {
        background-color: fade(@color-swatch6, 10%);
    }
    .hero-logo {
        position: relative;
        padding: 20px;
        @media @mobile {
            padding: 5px;
        }
    }
}

[data-widget-type="feature"] .widget-overlay {
    top: 200px !important;
    @media @mobile {
        top: 150px !important;
    }
}


// ----------
// Navigation
// ----------

.noscroll {
    position: fixed;
    width: 100%;
}

.extendednavigation .navigation-body {
    @media only screen and (min-width : 1024px) {
        margin: 10px 0;
    }
}

// Folder, adds arrow icon
.item-name--parent:after {
    display: inline-block;
    vertical-align: middle;
    content: "";
    margin-left: 4px;
    border: 5px solid transparent;
    border-top-color: @color__navigation--text;
    @media only screen and (max-width : 1024px) {
        border-top-color: @color__navigation--text;
    }
}
.item-name--parent:hover:after {
    border-top-color: @color__navigation--text--hover;
    @media only screen and (max-width : 1024px) {
        border-top-color: @color__navigation--text--hover;
    }
}

// Clears margin on ul
.navigation-list {
    margin: 0;
    width: auto;
}
/* ... */

